[workspace]
members = [
        "geyser-plugin-grpc",
        "lib",
        "connector-raw",
        "connector-mango",
        "trackoor",
        "service-mango-fills",
        "service-mango-pnl",
        "scratch"
]


[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }

