[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-geyser-connector-lib = { path = "../lib" }
solana-logger = "=1.10.35"
solana-sdk = "=1.10.35"
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-channel = "1.6"
serde = "1.0"
serde_derive = "1.0.130"
toml = "0.5"
mango = { path = "../../mango-v3/program" }
bytemuck = "*"
arrayref = "*"
sqlite = "*"