[package]
name = "trackoor"
version = "0.1.0"
authors = ["Maximilian Schneider <max@mango.markets>"]
edition = "2018"

[dependencies]
solana-geyser-connector-lib = { path = "../lib" }
solana-logger = "=1.10.35"
solana-sdk = "=1.10.35"
log = "0.4"
anyhow = "1.0"
async-channel = "1.6"
serde = "1.0"
serde_derive = "1.0.130"
serde_json = "1.0"
toml = "0.5"
mango = { path = "../../mango-v3/program" }
bytemuck = "*"
arrayref = "*"
itertools = "*"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-channel = "0.3"
futures-util = "0.3"
